welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:7: error: reassignment to val
  if ((day=6)||(day==0)){
          ^